--- a/granblue/draw.html
+++ b/granblue/draw.html
@@ -32,17 +32,10 @@
 			<label>Graph the probability of drawing at least
 			<input id="minimum" type="number" value="1" min="1">
 			of:</label>
-			<textarea id="wishlist" name="wishlist" rows="5">
-Izmir
-Silva
-Fudo-Kuniyuki
-Mina
-Erin
-Vane
-Kaguya
-Varuna
-Macula Marius
-Aquamarine Carbuncle</textarea>
+			<textarea id="wishlist" name="wishlist" rows="5">Sturm
+Katapillar and Vira
+Ludmila
+Godsworn Alexiel</textarea>
 			<ul id="queries"></ul>
 			<div id="add-query"></div>
 			<label for="exclude-list">Excluding</label>
@@ -51,403 +44,418 @@ Aquamarine Carbuncle</textarea>
 			<input id="max-draws" name="max-draws" type="number" value="100" min="1">
 			<label for="draw-data" title="Draw rate data copy and pasted from the in-game list">Draw rates from in-game</label>
 			<textarea id="draw-data" name="draw-data" rows="10">
-SS Rare Rates 3.00%
+SS Rare Rates 6.00%
 SS Rare Weapon Rates
-  Dainsleif 0.018%
-  Lohengrin 0.018%
-  Claíomh Solais 0.018%
-  Nagelring 0.300%
-  Ascalon 0.018%
-  Greatsword Andalius 0.018%
-  Yyrkoon 0.018%
-  Caladbolg 0.018%
-  Ethereal Lasher 0.018%
-  Hauteclaire 0.018%
-  Hrotti 0.018%
-  Disparia 0.018%
-  Gram 0.018%
-  Lyst Sin 0.018%
-  Mistilteinn 0.018%
-  Hoarfrost Blade Persius 0.018%
-  Phantom Thief Blade 0.018%
-  Arsene 0.018%
-  Heaven's Cloud 0.018%
-  Thunder Dirk Jove 0.018%
-  Twin Helix 0.018%
-  Azoth 0.018%
-  Bloody Scar 0.018%
-  Brionac 0.018%
-  Luin 0.018%
-  Pilum 0.018%
-  Gae Derg 0.018%
-  Gargantua 0.018%
-  Turpin Spear 0.018%
-  Skyrend Spear 0.018%
-  Sunspot Spear 0.018%
-  Scarlet Crest Axe 0.018%
-  Way Flyer 0.018%
-  Mettle 0.018%
-  Split End 0.018%
-  Windflash 0.018%
-  Ukonvasara 0.018%
-  Soul Eater 0.018%
-  Vassago 0.018%
-  Forbidden Inferno 0.018%
-  Illusion Scepter 0.018%
-  Starblaze Rings 0.018%
-  Ice Crystal Staff 0.018%
-  Montague's Oath 0.018%
-  Ouroboros 0.018%
-  Kerykeion 0.018%
-  Wing of the Pure 0.018%
-  Capulet's Oath 0.018%
-  Sealed Claustrum 0.018%
-  Gridarvor 0.018%
-  Kalaurops 0.018%
-  Meteora 0.018%
-  Vlisragna 0.300%
-  Stratomizer 0.018%
-  Far Away 0.018%
-  Blushing Blossom Pin 0.018%
-  Brahma Gauntlet 0.018%
-  Magma Gauntlet 0.018%
-  Scarlet Vane 0.018%
-  Ancient Bandages 0.018%
-  Coco & Mimi 0.018%
-  Roseate Aetherial Bow 0.018%
-  Aetherial Bow 0.018%
-  Heroic Bow 0.018%
-  Mobius Strip 0.018%
-  Melodic Sphere 0.018%
-  Ocean Harp 0.018%
-  Sandcastle Song-Lume 0.018%
-  Cords of Heaven Lillah 0.018%
-  Venustas 0.018%
-  Dragon Slayer 0.018%
-  Fudo-Kuniyuki 0.300%
+  Dainsleif 0.045%
+  Lohengrin 0.045%
+  Claíomh Solais 0.045%
+  Murgleis 0.045%
+  Nagelring 0.045%
+  Ascalon 0.045%
+  Greatsword Andalius 0.045%
+  Yyrkoon 0.045%
+  Caladbolg 0.045%
+  Ethereal Lasher 0.045%
+  Hauteclaire 0.045%
+  Hrotti 0.045%
+  Blutgang 0.045%
+  Disparia 0.045%
+  Gram 0.045%
+  Lyst Sin 0.045%
+  Mistilteinn 0.045%
+  Hoarfrost Blade Persius 0.045%
+  Phantom Thief Blade 0.045%
+  Arsene 0.045%
+  Heaven's Cloud 0.045%
+  Love Eternal 0.045%
+  Reunion 0.045%
+  Thunder Dirk Jove 0.045%
+  Twin Helix 0.045%
+  Azoth 0.045%
+  Bloody Scar 0.045%
+  Parazonium 0.045%
+  Brionac 0.045%
+  Luin 0.045%
+  Pilum 0.045%
+  Gae Derg 0.045%
+  Gargantua 0.045%
+  Turpin Spear 0.045%
+  Eden 0.045%
+  Skyrend Spear 0.045%
+  Sunspot Spear 0.045%
+  Scarlet Crest Axe 0.045%
+  Way Flyer 0.045%
+  Mettle 0.045%
+  Split End 0.045%
+  Windflash 0.045%
+  Ukonvasara 0.045%
+  Soul Eater 0.045%
+  Vassago 0.045%
+  Forbidden Inferno 0.045%
+  Illusion Scepter 0.045%
+  Starblaze Rings 0.045%
+  Ice Crystal Staff 0.045%
+  Montague's Oath 0.045%
+  Ouroboros 0.045%
+  Thyrsus 0.045%
+  Kerykeion 0.045%
+  Wing of the Pure 0.045%
+  Capulet's Oath 0.045%
+  Gambanteinn 0.045%
+  Sealed Claustrum 0.045%
+  Gridarvor 0.045%
+  Kalaurops 0.045%
+  Benedia 0.045%
+  Meteora 0.045%
+  Vlisragna 0.045%
+  AK-4A 0.045%
+  Stratomizer 0.045%
+  Far Away 0.045%
+  Blushing Blossom Pin 0.045%
+  Brahma Gauntlet 0.045%
+  Magma Gauntlet 0.045%
+  Metal Hand 0.450%
+  Scarlet Vane 0.045%
+  Ancient Bandages 0.045%
+  Coco & Mimi 0.045%
+  Roseate Aetherial Bow 0.045%
+  Aetherial Bow 0.045%
+  Heroic Bow 0.045%
+  Mobius Strip 0.045%
+  Melodic Sphere 0.045%
+  Ocean Harp 0.045%
+  Sandcastle Song-Lume 0.045%
+  Cords of Heaven Lillah 0.045%
+  Ixaba 0.250%
+  Venustas 0.045%
+  Dragon Slayer 0.045%
+  Fudo-Kuniyuki 0.045%
 SS Rare Summon Rates
- Agni 0.008%
- Athena 0.017%
- Prometheus 0.017%
- Satyr 0.017%
- Sethlans 0.017%
- Shiva 0.008%
- Twin Elements 0.017%
- Bonito 0.017%
- Ca Ong 0.017%
- Grani 0.017%
- Kaguya 0.037%
- Macula Marius 0.075%
- Neptune 0.017%
- Oceanus 0.017%
- Varuna 0.037%
- Baal 0.017%
- Cybele 0.017%
- Gilgamesh 0.017%
- Medusa 0.017%
- Tezcatlipoca 0.017%
- Titan 0.008%
- Garuda 0.017%
- Morrigna 0.017%
- Nezha 0.017%
- Quetzalcoatl 0.017%
- Rose Queen 0.017%
- Setekh 0.017%
- Siren 0.017%
- Zephyrus 0.008%
- Apollo 0.017%
- Grand Order 0.008%
- Hector 0.017%
- Lucifer 0.008%
- Odin 0.017%
- Thor 0.017%
- Vortex Dragon 0.017%
- Zeus 0.008%
- Anubis 0.017%
- Bahamut 0.008%
- Dark Angel Olivia 0.017%
- Hades 0.008%
- Lich 0.017%
- Satan 0.017%
- Typhon 0.017%
+  Agni 0.020%
+  Athena 0.041%
+  Prometheus 0.041%
+  Satyr 0.041%
+  Sethlans 0.041%
+  Shiva 0.020%
+  Twin Elements 0.041%
+  Bonito 0.041%
+  Ca Ong 0.041%
+  Grani 0.041%
+  Kaguya 0.020%
+  Macula Marius 0.041%
+  Neptune 0.041%
+  Oceanus 0.041%
+  Varuna 0.020%
+  Baal 0.041%
+  Cybele 0.041%
+  Gilgamesh 0.041%
+  Godsworn Alexiel 0.020%
+  Medusa 0.041%
+  Tezcatlipoca 0.041%
+  Titan 0.020%
+  Garuda 0.041%
+  Morrigna 0.041%
+  Nezha 0.041%
+  Quetzalcoatl 0.041%
+  Rose Queen 0.041%
+  Setekh 0.041%
+  Siren 0.041%
+  Zephyrus 0.020%
+  Apollo 0.041%
+  Grand Order 0.020%
+  Hector 0.041%
+  Lucifer 0.020%
+  Odin 0.041%
+  Thor 0.041%
+  Vortex Dragon 0.041%
+  Zeus 0.020%
+  Anubis 0.041%
+  Bahamut 0.020%
+  Dark Angel Olivia 0.041%
+  Hades 0.020%
+  Lich 0.041%
+  Satan 0.041%
+  Typhon 0.041%
 S Rare Rates 15.00%
 S Rare Weapon Rates
-  Ember Blade 0.053%
+  Ember Blade 0.050%
   Fragarach 0.166%
-  Ram-Dao 0.053%
-  Tanzanite Sword Mikoh 0.053%
+  Ram-Dao 0.050%
+  Tanzanite Sword Mikoh 0.050%
   Almace 0.166%
-  Aquablade 0.500%
-  Royal Rapier 0.053%
-  Frying Pan 0.053%
-  Grand Edge 0.053%
+  Aquablade 0.050%
+  Royal Rapier 0.050%
+  Frying Pan 0.050%
+  Grand Edge 0.050%
   Ilhoon 0.166%
   Twisted Dagger 0.166%
-  White Flag 0.053%
-  Arondight 0.053%
-  Lyst 0.053%
-  Purity Blade 0.053%
-  Tilvung 0.053%
-  Soulbond Dirk 0.053%
+  White Flag 0.050%
+  Arondight 0.050%
+  True Teardrop 0.050%
+  Lyst 0.050%
+  Purity Blade 0.050%
+  Tilvung 0.050%
+  Soulbond Dirk 0.050%
   Mirage Knife 0.166%
-  Shrike's Beak 0.053%
+  Shrike's Beak 0.050%
   Stiletto 0.166%
   Fusetto 0.166%
-  Sword of Lisblanc 0.053%
-  Soul Edge 0.053%
-  Puppet Knife 0.053%
-  Scalpel 0.053%
+  Sword of Lisblanc 0.050%
+  Soul Edge 0.050%
+  Puppet Knife 0.050%
+  Scalpel 0.050%
   Sword Breaker 0.166%
-  Wyrm Claw 0.053%
-  Flare Glaive 0.053%
-  Raging Halberd 0.500%
-  Narval 0.053%
-  Titanium Harpoon 0.053%
+  Wyrm Claw 0.050%
+  Flare Glaive 0.050%
+  Raging Halberd 0.050%
+  Narval 0.050%
+  Titanium Harpoon 0.050%
   Trident 0.166%
-  Dreadflayer 0.053%
-  Giant Fork 0.053%
-  Golden Mop 0.053%
+  Dreadflayer 0.050%
+  Giant Fork 0.050%
+  Golden Mop 0.050%
   Partisan 0.166%
   Dragonfliar Cutter 0.166%
   Shura Vhara 0.166%
   Vajranda 0.166%
-  Massive Axe 0.053%
+  Massive Axe 0.050%
   Bullova 0.166%
-  Fremel Hammer 0.053%
-  Great Hammer 0.053%
+  Fremel Hammer 0.050%
+  Great Hammer 0.050%
   Shoka 0.166%
-  Cloud Tomahawk 0.053%
-  Golden Woofer 0.053%
+  Cloud Tomahawk 0.050%
+  Golden Woofer 0.050%
   Horseman's Hammer 0.166%
-  Voulge 0.053%
-  Arson 0.053%
-  Nature's Mystery 0.053%
-  Soothing Torch 0.053%
-  Witch's Broom 0.053%
-  Ice Bough Staff 0.500%
-  Spritewood Staff 0.053%
+  Voulge 0.050%
+  Arson 0.050%
+  Nature's Mystery 0.050%
+  Soothing Torch 0.050%
+  Witch's Broom 0.050%
+  Ice Bough Staff 0.050%
+  Spritewood Staff 0.050%
   Yagrush 0.166%
   Pastoral Staff 0.166%
-  Zhonpeli 0.053%
-  Aerial Cane 0.053%
-  Flower Crown 0.053%
-  Wind-Rhyme Staff 0.053%
+  Zhonpeli 0.050%
+  Aerial Cane 0.050%
+  Flower Crown 0.050%
+  Wind-Rhyme Staff 0.050%
   Holy Cane 0.166%
-  Sacred Codex 0.053%
-  Cursed Cane 0.053%
-  Shadow Scepter 0.053%
-  Dolphin 0.053%
+  Sacred Codex 0.050%
+  Cursed Cane 0.050%
+  Shadow Scepter 0.050%
+  Dolphin 0.050%
   Dragon Tail 0.166%
-  Fire Piece 0.053%
-  Colorful Crackerjack 0.053%
-  Quarrel 0.053%
-  Handy Arquebus 0.053%
+  Fire Piece 0.050%
+  Colorful Crackerjack 0.050%
+  Quarrel 0.050%
+  Handy Arquebus 0.050%
   Wheellock Axe 0.166%
   Crosswind 0.166%
   Snaphance 0.166%
-  Standard Albion Bolt 0.053%
+  Standard Albion Bolt 0.050%
   Swallowtail 0.166%
-  Chain Knuckles 0.053%
-  Crimson Talons 0.053%
-  Cup and Saucer 0.053%
-  Kaiser Knuckles 0.053%
-  Impact Knuckles 0.053%
+  Hunter's Rifle 1.500%
+  Chain Knuckles 0.050%
+  Crimson Talons 0.050%
+  Cup and Saucer 0.050%
+  Kaiser Knuckles 0.050%
+  Impact Knuckles 0.050%
   Mauler 0.166%
-  Metal Glove 0.053%
+  Metal Glove 0.050%
   Neko Punch 0.166%
   Jamadhar 0.166%
-  Merciless Chastening 0.053%
-  Heavy Blast Knuckles 0.053%
-  Misanga Bracelet 0.053%
-  Tiger Fang 0.053%
-  Glass Bow 0.053%
+  Merciless Chastening 0.050%
+  Heavy Blast Knuckles 0.050%
+  Misanga Bracelet 0.050%
+  Tiger Fang 0.050%
+  Glass Bow 0.050%
   Imperial Bow 0.166%
   Sarnga 0.166%
   Aves 0.166%
-  Ice Bow 0.053%
+  Ice Bow 0.050%
   Elfin Bow 0.166%
-  Sutera's Bow 0.053%
+  Sutera's Bow 0.050%
   Shadow Bow 0.166%
-  Aquarium Harp 0.053%
+  Aquarium Harp 0.050%
   Athanasius 0.166%
-  Songsmith's Harp 0.053%
-  Stravaria 0.053%
+  Songsmith's Harp 0.050%
+  Stravaria 0.050%
   Iron Tiger 0.166%
-  Wandering Blade 0.053%
+  Wandering Blade 0.050%
   Fluorithium Blade 0.166%
-  Zanbato 0.053%
+  Zanbato 0.050%
   Sauria 0.166%
 S Rare Summon Rates
- Garnet Carbuncle 0.088%
- Hellhound 0.088%
- Hydra 0.088%
- Vrazarek Firewyrm 0.088%
- Angelie Cascade 0.800%
- Aquamarine Carbuncle 0.800%
- Wilinus Icewyrm 0.800%
- Clay Golem 0.088%
- Doomworm 0.088%
- Golem 0.088%
- Myconid 0.088%
- Ruination Gargoyle 0.088%
- Stone Golem 0.088%
- Zircon Carbuncle 0.088%
- Elmenhilde Windsprite 0.088%
- Elusious Windwyrm 0.088%
- Griffin 0.088%
- Wyvern 0.088%
- Opal Carbuncle 0.088%
- Pixie 0.088%
- Onyx Carbuncle 0.088%
-Rare Rates 82.00%
+  Garnet Carbuncle 0.190%
+  Hellhound 0.190%
+  Hydra 0.190%
+  Vrazarek Firewyrm 0.190%
+  Angelie Cascade 0.190%
+  Aquamarine Carbuncle 0.190%
+  Wilinus Icewyrm 0.190%
+  Clay Golem 0.190%
+  Doomworm 0.190%
+  Golem 0.190%
+  Myconid 0.190%
+  Ruination Gargoyle 0.190%
+  Stone Golem 0.190%
+  Zircon Carbuncle 0.190%
+  Elmenhilde Windsprite 0.190%
+  Elusious Windwyrm 0.190%
+  Griffin 0.190%
+  Wyvern 0.190%
+  Opal Carbuncle 0.190%
+  Pixie 0.190%
+  Onyx Carbuncle 0.190%
+Rare Rates 79.00%
 Rare Weapon Rates
-  Anelace 0.692%
-  Claymore 0.692%
-  Falchion 0.692%
-  Fire Sword 0.183%
-  Flame Rapier 0.692%
-  Vintage Flat Iron 0.183%
-  Ice Sword 0.692%
-  Icey Nail 0.692%
-  Shrimp Lure 0.700%
-  White Sword 0.183%
-  Earth Cutlass 0.692%
-  Heavy Metal Comb 0.183%
-  Two-Handed Sword 0.183%
-  Xiphos 0.183%
-  Lightbringer 0.183%
-  Old Sword 0.183%
-  Paper Fan 0.183%
-  Practice Sword 0.183%
-  Blue Crest 0.183%
-  Prism Tear 0.183%
-  Thunder Rapier 0.183%
-  Dark Sword 0.183%
-  Broken Bottle 0.183%
-  Fire Baselard 0.692%
-  Little Scarlet 0.183%
-  Kila 0.692%
-  Mailbreaker 0.692%
-  Water Kukri 0.692%
-  Kris 0.692%
-  Emerald Dagger 0.692%
-  Leaf Dagger 0.692%
-  Mandau 0.183%
-  Holy Kris 0.692%
-  Assassin's Dagger 0.692%
-  Bloody Piercer 0.183%
-  Dark Knife 0.692%
-  Switchblade 0.183%
-  Couse 0.692%
-  Fire Glaive 0.692%
-  Flame Halberd 0.692%
-  Langdebeve 0.692%
-  Aquan Killer 0.692%
-  Silver Pole 0.183%
-  Earth Halberd 0.692%
-  Ghillie Fork 0.183%
-  Halberd 0.692%
-  Night Horn 0.183%
-  Iron Pliers 0.183%
-  Soldier Axe 0.183%
-  Harvester 0.692%
-  Battle Axe 0.692%
-  Draph Hammer 0.183%
-  Earth Zaghnal 0.692%
-  Rock Hammer 0.692%
-  Sky Tomahawk 0.183%
-  Wind Axe 0.692%
-  Morning Star 0.183%
-  Tabar 0.692%
-  Thunder Kalinga Axe 0.692%
-  Neckchopper 0.692%
-  Forest Hermit Staff 0.183%
-  Rubia Rod 0.183%
-  Torch 0.183%
-  Cane 0.692%
-  Ocean Rod 0.692%
-  Snowman Rod 0.183%
-  Student Notebook 0.700%
-  Water Rod 0.692%
-  Feather Staff 0.692%
-  Stone Pole 0.183%
-  Taiaha 0.183%
-  Emerald Cane 0.692%
-  Feather Wand 0.183%
-  Moss Tree Staff 0.183%
-  Wind Rod 0.692%
-  Light Staff 0.183%
-  Shareeravadi 0.692%
-  Evil Wand 0.692%
-  The Cross 0.183%
-  Derringer 0.183%
-  Flame Bolt 0.183%
-  Grenade 0.692%
-  Matchlock 0.692%
-  Sawed-Off Shotgun 0.183%
-  Self Defender 0.183%
-  Straight Anchor 0.692%
-  Ranger Pistol 0.692%
-  Hand Pistol 0.692%
-  Petronel 0.183%
-  Jezail 0.692%
-  Chopsticks 0.183%
-  Fireball 0.692%
-  Heated Pata 0.692%
-  Pata 0.692%
-  Boogie Plates 0.700%
-  Fish Tooth 0.692%
-  Gauntlet 0.692%
-  Oven Mitts 0.183%
-  Tattoo Fist 0.183%
-  Tidal Wraps 0.692%
-  Iron Guard 0.183%
-  Mythril Knuckles 0.183%
-  Rock Cutter 0.692%
-  Tonfa 0.183%
-  Enchanted Nail 0.183%
-  Light Buckler 0.183%
-  Mythril Baghnakhs 0.692%
-  Whirlwind Wraps 0.692%
-  Blast Knuckles 0.183%
-  Composite Bow 0.692%
-  Flame Bow 0.183%
-  Mythril Bow 0.692%
-  Longbow 0.692%
-  Earth Bow 0.692%
-  Power Bow 0.692%
-  War Bow 0.692%
-  Wrapped Bow 0.692%
-  Lyre of Lamia 0.692%
-  Bronze Bell 0.183%
-  Night Bell 0.183%
-  Nodachi 0.692%
-  Mythril Katana 0.692%
+  Anelace 0.646%
+  Claymore 0.646%
+  Falchion 0.646%
+  Fire Sword 0.210%
+  Flame Rapier 0.646%
+  Vintage Flat Iron 0.210%
+  Ice Sword 0.646%
+  Icey Nail 0.646%
+  Shrimp Lure 0.210%
+  White Sword 0.210%
+  Earth Cutlass 0.646%
+  Heavy Metal Comb 0.210%
+  Two-Handed Sword 0.210%
+  Xiphos 0.210%
+  Lightbringer 0.210%
+  Old Sword 0.210%
+  Paper Fan 0.210%
+  Practice Sword 0.210%
+  Blue Crest 0.210%
+  Prism Tear 0.210%
+  Thunder Rapier 0.210%
+  Dark Sword 0.210%
+  Broken Bottle 0.210%
+  Fire Baselard 0.646%
+  Little Scarlet 0.210%
+  Kila 0.646%
+  Mailbreaker 0.646%
+  Water Kukri 0.646%
+  Kris 0.646%
+  Emerald Dagger 0.646%
+  Leaf Dagger 0.646%
+  Mandau 0.210%
+  Holy Kris 0.646%
+  Assassin's Dagger 0.646%
+  Bloody Piercer 0.210%
+  Dark Knife 0.646%
+  Switchblade 0.210%
+  Couse 0.646%
+  Fire Glaive 0.646%
+  Flame Halberd 0.646%
+  Langdebeve 0.646%
+  Aquan Killer 0.646%
+  Silver Pole 0.210%
+  Earth Halberd 0.646%
+  Ghillie Fork 0.210%
+  Halberd 0.646%
+  Night Horn 0.210%
+  Iron Pliers 0.210%
+  Soldier Axe 0.210%
+  Harvester 0.646%
+  Battle Axe 0.646%
+  Draph Hammer 0.210%
+  Earth Zaghnal 0.646%
+  Rock Hammer 0.646%
+  Sky Tomahawk 0.210%
+  Wind Axe 0.646%
+  Morning Star 0.210%
+  Tabar 0.646%
+  Thunder Kalinga Axe 0.646%
+  Neckchopper 0.646%
+  Forest Hermit Staff 0.210%
+  Rubia Rod 0.210%
+  Torch 0.210%
+  Cane 0.646%
+  Ocean Rod 0.646%
+  Snowman Rod 0.210%
+  Student Notebook 0.210%
+  Water Rod 0.646%
+  Feather Staff 0.646%
+  Stone Pole 0.210%
+  Taiaha 0.210%
+  Emerald Cane 0.646%
+  Feather Wand 0.210%
+  Moss Tree Staff 0.210%
+  Wind Rod 0.646%
+  Light Staff 0.210%
+  Shareeravadi 0.646%
+  Evil Wand 0.646%
+  The Cross 0.210%
+  Derringer 0.210%
+  Flame Bolt 0.210%
+  Grenade 0.646%
+  Matchlock 0.646%
+  Sawed-Off Shotgun 0.210%
+  Self Defender 0.210%
+  Straight Anchor 0.646%
+  Ranger Pistol 0.646%
+  Hand Pistol 0.646%
+  Petronel 0.210%
+  Jezail 0.646%
+  Chopsticks 0.210%
+  Fireball 0.646%
+  Heated Pata 0.646%
+  Pata 0.646%
+  Boogie Plates 0.210%
+  Fish Tooth 0.646%
+  Gauntlet 0.646%
+  Oven Mitts 0.210%
+  Tattoo Fist 0.210%
+  Tidal Wraps 0.646%
+  Iron Guard 0.210%
+  Mythril Knuckles 0.210%
+  Rock Cutter 0.646%
+  Tonfa 0.210%
+  Enchanted Nail 0.210%
+  Light Buckler 0.210%
+  Mythril Baghnakhs 0.646%
+  Whirlwind Wraps 0.646%
+  Blast Knuckles 0.210%
+  Composite Bow 0.646%
+  Flame Bow 0.210%
+  Mythril Bow 0.646%
+  Longbow 0.646%
+  Earth Bow 0.646%
+  Power Bow 0.646%
+  War Bow 0.646%
+  Wrapped Bow 0.646%
+  Lyre of Lamia 0.646%
+  Bronze Bell 0.210%
+  Night Bell 0.210%
+  Nodachi 0.646%
+  Mythril Katana 0.646%
 Rare Summon Rates
- Minotaur 1.041%
- Twilight Devil 1.041%
- Venom Lancer 1.041%
- Walking Torch 1.041%
- Angelie 1.041%
- Crusher 1.041%
- Jawfish 1.041%
- Purgatorian 1.041%
- Rivacuda 1.041%
- Slime 1.041%
- Swordshark 1.041%
- Bonethorn 1.041%
- Crawler 1.041%
- Lumacie Griffin 1.041%
- Mandrake 1.041%
- Sleepyhead 1.041%
- Belle 1.041%
- Dragonflair 1.041%
- Hornbird 1.041%
- Rodfly 1.041%
- Ghost Light 1.041%
- Cave Bat 1.041%
- Imp 1.041%
- Skeleton 1.041%</textarea>
+  Minotaur 1.041%
+  Twilight Devil 1.041%
+  Venom Lancer 1.041%
+  Walking Torch 1.041%
+  Angelie 1.041%
+  Crusher 1.041%
+  Jawfish 1.041%
+  Purgatorian 1.041%
+  Rivacuda 1.041%
+  Slime 1.041%
+  Swordshark 1.041%
+  Bonethorn 1.041%
+  Crawler 1.041%
+  Lumacie Griffin 1.041%
+  Mandrake 1.041%
+  Sleepyhead 1.041%
+  Belle 1.041%
+  Dragonflair 1.041%
+  Hornbird 1.041%
+  Rodfly 1.041%
+  Ghost Light 1.041%
+  Cave Bat 1.041%
+  Imp 1.041%
+  Skeleton 1.041%</textarea>
 			<small>Built-in draw rates last updated 2017-03-05.</small>
 		</form>
 		<div id="chart"></div>
