Update draw rates

--- a/granblue/draw.html
+++ b/granblue/draw.html
@@ -35,8 +35,9 @@
 			<label>Graph the probability of drawing at least
 			<input id="minimum" type="number" value="1" min="1">
 			of:</label>
-			<textarea id="wishlist" name="wishlist" rows="5">Azazel
-Vampire's Nail</textarea>
+			<textarea id="wishlist" name="wishlist" rows="5">Murgleis
+Izayoi
+Silver Fan</textarea>
 			<ul id="queries"></ul>
 			<div id="add-query"></div>
 			<label for="exclude-list">Excluding</label>
@@ -44,228 +45,257 @@ Vampire's Nail</textarea>
 			<label for="max-draws">Maximum Draws</label>
 			<input id="max-draws" name="max-draws" type="number" value="300" min="1">
 			<label for="draw-data" title="Draw rate data copy and pasted from the in-game list">Draw rates from in-game</label>
-			<textarea id="draw-data" name="draw-data" rows="10">SS Rare Rates 3.00%
+			<textarea id="draw-data" name="draw-data" rows="10">SS Rare Rates 6.00%
 SS Rare Character Weapons Rates
 Dainsleif
-  (Altair) 0.018%
+  (Altair) 0.038%
 Lohengrin
-  (Percival) 0.018%
+  (Percival) 0.038%
 Claíomh Solais
-  (Charlotta) 0.018%
+  (Charlotta) 0.038%
+Murgleis
+  (Katalina) 0.250%
 Nagelring
-  (Izmir) 0.018%
+  (Izmir) 0.038%
 Ascalon
-  (Siegfried) 0.018%
+  (Siegfried) 0.038%
 Greatsword Andalius
-  (Aletheia) 0.018%
+  (Aletheia) 0.038%
 Yyrkoon
-  (Yuisis) 0.018%
+  (Yuisis) 0.038%
 Caladbolg
-  (Jeanne d'Arc) 0.018%
+  (Jeanne d'Arc) 0.038%
 Ethereal Lasher
-  (Ferry) 0.018%
+  (Ferry) 0.038%
 Hauteclaire
-  (Albert) 0.018%
+  (Albert) 0.038%
 Hrotti
-  (Seruel) 0.018%
+  (Seruel) 0.038%
 Symbol of Justice
-  (Baotorda) 0.018%
+  (Baotorda) 0.038%
+Blutgang
+  (Black Knight) 0.038%
 Disparia
-  (Jeanne d'Arc) 0.018%
+  (Jeanne d'Arc) 0.038%
 Gram
-  (Beatrix) 0.018%
+  (Beatrix) 0.038%
 Lyst Sin
-  (Vira) 0.018%
+  (Vira) 0.038%
 Mistilteinn
-  (Vaseraga) 0.018%
+  (Vaseraga) 0.038%
 Hoarfrost Blade Persius
-  (Lancelot) 0.018%
+  (Lancelot) 0.038%
 Phantom Thief Blade
-  (Chat Noir) 0.018%
+  (Chat Noir) 0.038%
 Arsene
-  (Catherine) 0.018%
+  (Catherine) 0.038%
 Heaven's Cloud
-  (Petra) 0.018%
+  (Petra) 0.038%
+Love Eternal
+  (Rosetta) 0.038%
+Reunion
+  (Lecia) 0.038%
 Thunder Dirk Jove
-  (Agielba) 0.018%
+  (Agielba) 0.038%
 Twin Helix
-  (Rosamia) 0.018%
+  (Rosamia) 0.038%
 Azoth
-  (Vania) 0.018%
+  (Vania) 0.038%
 Bloody Scar
-  (Veight) 0.018%
+  (Veight) 0.038%
+Parazonium
+  (Orchid) 0.038%
 Brionac
-  (Zeta) 0.018%
+  (Zeta) 0.038%
 Luin
-  (Heles) 0.018%
+  (Heles) 0.038%
 Pilum
-  (Nezahualpilli) 0.018%
+  (Nezahualpilli) 0.038%
 Daemon's Spine
-  (Anne) 0.018%
+  (Anne) 0.038%
 Gae Derg
-  (Razia) 0.018%
+  (Razia) 0.038%
 Gargantua
-  (Arulumaya) 0.018%
+  (Arulumaya) 0.038%
 Turpin Spear
-  (Carmelina) 0.018%
+  (Carmelina) 0.038%
+Eden
+  (Lucio) 0.038%
+Ramulus
+  (Anila) 0.038%
 Shadow Viperlance
-  (Azazel) 0.700%
+  (Azazel) 0.038%
 Skyrend Spear
-  (Forte) 0.018%
+  (Forte) 0.038%
 Sunspot Spear
-  (Zeta) 0.018%
+  (Zeta) 0.038%
 Scarlet Crest Axe
-  (Yuel) 0.018%
+  (Yuel) 0.038%
 Way Flyer
-  (Aoidos) 0.018%
+  (Aoidos) 0.038%
 Blossom Axe
-  (Vane) 0.018%
+  (Vane) 0.038%
 Mettle
-  (Nemone) 0.018%
+  (Nemone) 0.038%
 Split End
-  (Melissabelle) 0.018%
+  (Melissabelle) 0.038%
 Windflash
-  (Gawain) 0.018%
+  (Gawain) 0.038%
 Ukonvasara
-  (Lady Grey) 0.018%
+  (Lady Grey) 0.038%
 Soul Eater
-  (Hallessena) 0.018%
+  (Hallessena) 0.038%
 Vassago
-  (Melleau) 0.018%
+  (Melleau) 0.038%
 Forbidden Inferno
-  (Anthuria) 0.018%
+  (Anthuria) 0.038%
 Illusion Scepter
-  (Magisa) 0.018%
+  (Magisa) 0.038%
 Starblaze Rings
-  (Zahlhamelina) 0.018%
+  (Zahlhamelina) 0.038%
+Blue Sphere
+  (Drang ) 0.038%
 Ice Crystal Staff
-  (Lily) 0.018%
+  (Lily) 0.038%
 Montague's Oath
-  (Romeo) 0.018%
+  (Romeo) 0.038%
 Ouroboros
-  (Cagliostro) 0.018%
+  (Cagliostro) 0.038%
 Thyrsus
-  (De La Fille) 0.018%
+  (De La Fille) 0.038%
 Kerykeion
-  (De La Fille) 0.018%
+  (De La Fille) 0.038%
 Wing of the Pure
-  (Korwa) 0.018%
+  (Korwa) 0.038%
 Capulet's Oath
-  (Juliet) 0.018%
+  (Juliet) 0.038%
+Gambanteinn
+  (Io) 0.038%
 Sealed Claustrum
-  (Sarunan) 0.018%
+  (Sarunan) 0.038%
 Black Ouroboros
-  (Cagliostro) 0.018%
+  (Cagliostro) 0.038%
 Gridarvor
-  (Marquiares) 0.018%
+  (Marquiares) 0.038%
 Kalaurops
-  (Sarunan) 0.018%
+  (Sarunan) 0.038%
+Benedia
+  (Rackam) 0.038%
 Meteora
-  (Yngwie) 0.018%
+  (Yngwie) 0.038%
 Vlisragna
-  (Silva) 0.018%
+  (Silva) 0.038%
+AK-4A
+  (Eugen) 0.038%
 Stratomizer
-  (Eustace) 0.018%
+  (Eustace) 0.038%
 Far Away
-  (Lennah) 0.018%
+  (Lennah) 0.038%
 Blushing Blossom Pin
-  (Societte) 0.018%
+  (Societte) 0.038%
 Brahma Gauntlet
-  (Ghandagoza) 0.018%
+  (Ghandagoza) 0.038%
 Draco Claw
-  (Grea) 0.018%
+  (Grea) 0.038%
 Magma Gauntlet
-  (Aliza) 0.018%
+  (Aliza) 0.038%
 Metal Hand
-  (Lady Katapillar and Vira) 0.018%
+  (Lady Katapillar and Vira) 0.038%
 Scarlet Vane
-  (Societte) 0.018%
+  (Societte) 0.038%
 Ancient Bandages
-  (Ayer) 0.018%
+  (Ayer) 0.038%
 Deirdre's Claws
-  (Scathacha) 0.018%
+  (Scathacha) 0.038%
 Gothic Cutlery
-  (Dorothy and Claudia) 0.018%
+  (Dorothy and Claudia) 0.038%
 Coco & Mimi
-  (Cerberus) 0.018%
+  (Cerberus) 0.038%
 Roseate Aetherial Bow
-  (Metera) 0.018%
+  (Metera) 0.038%
+Gallinarius
+  (Mahira) 0.038%
 Aetherial Bow
-  (Metera) 0.018%
+  (Metera) 0.038%
 Heroic Bow
-  (Feena) 0.018%
+  (Feena) 0.038%
 Mobius Strip
-  (Clarisse) 0.018%
+  (Clarisse) 0.038%
 Melodic Sphere
-  (Lilele) 0.018%
+  (Lilele) 0.038%
 Ocean Harp
-  (Sophia) 0.018%
+  (Sophia) 0.038%
 Bella Aeterna
-  (Yggdrasil) 0.018%
+  (Yggdrasil) 0.038%
 Sandcastle Song-Lume
-  (Sara) 0.018%
-Cords of Heaven Lillah 
-  (Arriet) 0.018%
+  (Sara) 0.038%
+Cords of Heaven Lillah
+  (Arriet) 0.038%
 Fusion Mobius
-  (Clarisse) 0.018%
+  (Clarisse) 0.038%
+Ixaba
+  (Sturm) 0.038%
+Izayoi
+  (Yuel) 0.450%
 Venustas
-  (Narmaya) 0.018%
+  (Narmaya) 0.038%
 Dragon Slayer
-  (Amira) 0.018%
+  (Amira) 0.038%
 Fudo-Kuniyuki
-  (Yodarha) 0.018%
+  (Yodarha) 0.038%
 SS Rare Summon Rates
-Agni 0.015%
-Athena 0.015%
-Prometheus 0.015%
-Satyr 0.015%
-Sethlans 0.015%
-Shiva 0.015%
-Twin Elements 0.015%
-Zaoshen 0.015%
-Bonito 0.015%
-Ca Ong 0.015%
-Europa 0.015%
-Grani 0.015%
-Kaguya 0.015%
-Macula Marius 0.015%
-Neptune 0.015%
-Oceanus 0.015%
-Varuna 0.015%
-Ankusha 0.015%
-Baal 0.015%
-Cybele 0.015%
-Gilgamesh 0.015%
-Godsworn Alexiel 0.015%
-Medusa 0.015%
-Tezcatlipoca 0.015%
-Titan 0.015%
-Garuda 0.015%
-Garula, Shining Hawk 0.015%
-Morrigna 0.015%
-Nezha 0.015%
-Quetzalcoatl 0.015%
-Rose Queen 0.015%
-Setekh 0.015%
-Siren 0.015%
-Zephyrus 0.015%
-Aphrodite 0.015%
-Apollo 0.015%
-Grand Order 0.015%
-Hector 0.015%
-Lucifer 0.015%
-Odin 0.015%
-Thor 0.015%
-Vortex Dragon 0.015%
-Zeus 0.015%
-Anubis 0.015%
-Bahamut 0.015%
-Dark Angel Olivia 0.015%
-Hades 0.015%
-Lich 0.015%
-Nacht 0.015%
-Satan 0.015%
-Typhon 0.015%
+Agni 0.030%
+Athena 0.030%
+Prometheus 0.030%
+Satyr 0.030%
+Sethlans 0.030%
+Shiva 0.030%
+Twin Elements 0.030%
+Zaoshen 0.030%
+Bonito 0.030%
+Ca Ong 0.030%
+Europa 0.030%
+Grani 0.030%
+Kaguya 0.030%
+Macula Marius 0.030%
+Neptune 0.030%
+Oceanus 0.030%
+Snow White 0.030%
+Varuna 0.030%
+Ankusha 0.030%
+Baal 0.030%
+Cybele 0.030%
+Gilgamesh 0.030%
+Godsworn Alexiel 0.030%
+Medusa 0.030%
+Tezcatlipoca 0.030%
+Titan 0.030%
+Garuda 0.030%
+Garula, Shining Hawk 0.030%
+Morrigna 0.030%
+Nezha 0.030%
+Quetzalcoatl 0.030%
+Rose Queen 0.030%
+Setekh 0.030%
+Siren 0.030%
+Zephyrus 0.030%
+Aphrodite 0.030%
+Apollo 0.030%
+Grand Order 0.030%
+Hector 0.030%
+Lucifer 0.030%
+Odin 0.030%
+Thor 0.030%
+Vortex Dragon 0.030%
+Zeus 0.030%
+Anubis 0.030%
+Bahamut 0.030%
+Dark Angel Olivia 0.030%
+Hades 0.030%
+Lich 0.030%
+Nacht 0.030%
+Satan 0.030%
+Typhon 0.030%
 S Rare Rates 15.00%
 S Rare Character Weapons Rates
 Ember Blade
@@ -286,6 +316,8 @@ Frying Pan
   (Yaia) 0.043%
 Grand Edge
   (Herja) 0.043%
+Silver Fan
+  (Karteira) 1.500%
 White Flag
   (Mimlemel and Stumpeye) 0.043%
 Arondight
@@ -411,7 +443,7 @@ Tiger Fang
 Cruel Claw
   (Predator) 0.043%
 Vampire's Nail
-  (Vania) 1.500%
+  (Vania) 0.043%
 Glass Bow
   (Sutera) 0.043%
 Ice Bow
@@ -489,7 +521,7 @@ Wyvern 0.190%
 Opal Carbuncle 0.190%
 Pixie 0.190%
 Onyx Carbuncle 0.190%
-Rare Rates 82.00%
+Rare Rates 79.00%
 Rare Character Weapons Rates
 Fire Sword
   (Farrah) 0.210%
@@ -606,71 +638,71 @@ Bronze Bell
 Night Bell
   (Lunalu) 0.210%
 Rare Non-Character Weapons Rates
-Anelace 0.692%
-Claymore 0.692%
-Falchion 0.692%
-Flame Rapier 0.692%
-Ice Sword 0.692%
-Icey Nail 0.692%
-Earth Cutlass 0.692%
-Fire Baselard 0.692%
-Kila 0.692%
-Mailbreaker 0.692%
-Water Kukri 0.692%
-Kris 0.692%
-Emerald Dagger 0.692%
-Leaf Dagger 0.692%
-Holy Kris 0.692%
-Assassin's Dagger 0.692%
-Dark Knife 0.692%
-Couse 0.692%
-Fire Glaive 0.692%
-Flame Halberd 0.692%
-Langdebeve 0.692%
-Aquan Killer 0.692%
-Earth Halberd 0.692%
-Halberd 0.692%
-Harvester 0.692%
-Battle Axe 0.692%
-Earth Zaghnal 0.692%
-Rock Hammer 0.692%
-Wind Axe 0.692%
-Tabar 0.692%
-Thunder Kalinga Axe 0.692%
-Neckchopper 0.692%
-Cane 0.692%
-Ocean Rod 0.692%
-Water Rod 0.692%
-Feather Staff 0.692%
-Emerald Cane 0.692%
-Wind Rod 0.692%
-Shareeravadi 0.692%
-Evil Wand 0.692%
-Grenade 0.692%
-Matchlock 0.692%
-Straight Anchor 0.692%
-Ranger Pistol 0.692%
-Hand Pistol 0.692%
-Jezail 0.692%
-Fireball 0.692%
-Heated Pata 0.692%
-Pata 0.692%
-Fish Tooth 0.692%
-Gauntlet 0.692%
-Tidal Wraps 0.692%
-Rock Cutter 0.692%
-Mythril Baghnakhs 0.692%
-Whirlwind Wraps 0.692%
-Composite Bow 0.692%
-Mythril Bow 0.692%
-Longbow 0.692%
-Earth Bow 0.692%
-Power Bow 0.692%
-War Bow 0.692%
-Wrapped Bow 0.692%
-Lyre of Lamia 0.692%
-Nodachi 0.692%
-Mythril Katana 0.692%
+Anelace 0.646%
+Claymore 0.646%
+Falchion 0.646%
+Flame Rapier 0.646%
+Ice Sword 0.646%
+Icey Nail 0.646%
+Earth Cutlass 0.646%
+Fire Baselard 0.646%
+Kila 0.646%
+Mailbreaker 0.646%
+Water Kukri 0.646%
+Kris 0.646%
+Emerald Dagger 0.646%
+Leaf Dagger 0.646%
+Holy Kris 0.646%
+Assassin's Dagger 0.646%
+Dark Knife 0.646%
+Couse 0.646%
+Fire Glaive 0.646%
+Flame Halberd 0.646%
+Langdebeve 0.646%
+Aquan Killer 0.646%
+Earth Halberd 0.646%
+Halberd 0.646%
+Harvester 0.646%
+Battle Axe 0.646%
+Earth Zaghnal 0.646%
+Rock Hammer 0.646%
+Wind Axe 0.646%
+Tabar 0.646%
+Thunder Kalinga Axe 0.646%
+Neckchopper 0.646%
+Cane 0.646%
+Ocean Rod 0.646%
+Water Rod 0.646%
+Feather Staff 0.646%
+Emerald Cane 0.646%
+Wind Rod 0.646%
+Shareeravadi 0.646%
+Evil Wand 0.646%
+Grenade 0.646%
+Matchlock 0.646%
+Straight Anchor 0.646%
+Ranger Pistol 0.646%
+Hand Pistol 0.646%
+Jezail 0.646%
+Fireball 0.646%
+Heated Pata 0.646%
+Pata 0.646%
+Fish Tooth 0.646%
+Gauntlet 0.646%
+Tidal Wraps 0.646%
+Rock Cutter 0.646%
+Mythril Baghnakhs 0.646%
+Whirlwind Wraps 0.646%
+Composite Bow 0.646%
+Mythril Bow 0.646%
+Longbow 0.646%
+Earth Bow 0.646%
+Power Bow 0.646%
+War Bow 0.646%
+Wrapped Bow 0.646%
+Lyre of Lamia 0.646%
+Nodachi 0.646%
+Mythril Katana 0.646%
 Rare Summon Rates
 Minotaur 1.041%
 Twilight Devil 1.041%
